Alignments on all pages look correct.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,7 +95,7 @@ html, body{
   }
   .aboutMe>p{
       margin: 5px;
-      padding: 5px 20px 5px 5px;
+      padding: 5px 0 5px 0;
   }
 
   footer{
